src/org/jetbrains/kotlinx/jupyter/plugin/lang/grammar/JKTMeta.bnf
{
  parserClass="org.jetbrains.kotlinx.jupyter.plugin.psi.meta.JKTMetaParser"
  extends="com.intellij.extapi.psi.ASTWrapperPsiElement"

  psiClassPrefix="JKTMeta"
  psiImplClassSuffix="Impl"
  psiPackage="org.jetbrains.kotlinx.jupyter.plugin.psi.meta"
  psiImplPackage="org.jetbrains.kotlinx.jupyter.plugin.psi.meta.impl"

  elementTypeHolderClass="org.jetbrains.kotlinx.jupyter.plugin.psi.meta.JKTMetaTypes"
  elementTypeClass="org.jetbrains.kotlinx.jupyter.plugin.lang.psi.JKTMetaElementType"
  tokenTypeClass="org.jetbrains.kotlinx.jupyter.plugin.lang.psi.JKTMetaTokenType"

  tokens = [
    ANY="regexp:.*"
    NEWLINE="regexp:\n"
  ]
}

root ::= file
file ::= marker_line? statements?

marker_line ::= CODE_MARKER ANY* newline_or_eof

statements ::= (empty_statements? command_statement empty_statements?) | repeatable_statements?

repeatable_statements ::= (empty_statements | magic_statement)+

command_statement ::= COMMAND_SIGN statement_id newline_or_eof {
    implements="org.jetbrains.kotlinx.jupyter.plugin.lang.psi.JKTMetaCommandStatement"
}
magic_statement ::= MAGIC_SIGN statement_id args newline_or_eof {
    implements="org.jetbrains.kotlinx.jupyter.plugin.lang.psi.JKTMetaMagicStatement"
}

statement_id ::= ID

empty_statements ::= NEWLINE+ <<eof>>?

newline_or_eof ::= NEWLINE | <<eof>>

args ::= arg*
arg ::= NONSPACE_VAL
